Changelog for mk-query-digest:

   * Added --review-history and --create-review-history (issue 194).
   * Removed string interpolation from debugging calls (issue 308).
   * Standard deviation was not for all values (issue 321).
   * Attributes with mostly zero values caused an infinite loop (issue 321).
   * Very large INSERT or REPLACE VALUES() segfaulted (issue 322).
   * Empty Schema attribute was not handled properly (issue 323).
   * Connection options were not read from the [client] section (issue 249).
   * Set connection options immediately after connecting (issue 286).

2009-03-01: version 0.9.3

   * Added --createreview option to create the --review table (issue 266).
   * Database wasn't printed in SHOW CREATE TABLE/SHOW TABLE STATUS (issue 290).
   * "--report tables" will now print "SHOW CREATE..." etc (issue 287).
   * Some long queries were not shortened (issue 292).
   * INSERT/ON DUPLICATE KEY UPDATE caused extra tables to be found (issue 291).
   * Changed the --truncateinsert option to --shorten (issue 292).
   * Added --explain to print the EXPLAIN in the report (issue 199).
   * Added 'bytes' property to log events (issue 247).
   * Some INSERT/REPLACE queries were not truncated (issue 216).
   * INSERT/REPLACE were needlessly converted for EXPLAIN (issue 283).
   * SELECTs starting with a comment were converted for EXPLAIN (issue 252).
   * Added informational text to show why items are reported on (issue 282).
   * IN() lists were parsed as table names (issue 277).
   * The parser crashed on some logs from Windows servers (issue 267).
   * Added the ability to parse embedded attributes (issue 177).
   * Log entries without a Time property crashed --review (issue 263).
   * All-zero timestamps displayed in unwanted places (issue 202).

2009-02-01: version 0.9.2

   * Renamed from mk-log-parser to mk-query-digest.
   * Added the --timeline option (issue 254).
   * Added the ability to analyze with --groupby distill (issue 254).