@@ -1,0 +1,190 @@
+--orderby attribute Rows_read doesn't exist, using Query_time
+
+# Query 1: 0 QPS, 0x concurrency, ID 0x66825DDC008FFA89 at byte 332 ______
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         12       1
+# Exec time     95   726ms   726ms   726ms   726ms   726ms       0   726ms
+# Lock time     29    91us    91us    91us    91us    91us       0    91us
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam    100  61.48k  61.48k  61.48k  61.48k  61.48k       0  61.48k
+# Users          1 [SQL_SLAVE]
+# Databases      1     db1
+# Time range
+# Query_time distribution
+#   1us
+#  10us
+# 100us
+#   1ms
+#  10ms
+# 100ms  ################################################################
+#    1s
+#  10s+
+# Tables
+#    SHOW TABLE STATUS FROM `db2` LIKE 'tuningdetail_21_265507'\G
+#    SHOW CREATE TABLE `db2`.`tuningdetail_21_265507`\G
+#    SHOW TABLE STATUS FROM `db1` LIKE 'gonzo'\G
+#    SHOW CREATE TABLE `db1`.`gonzo`\G
+update db2.tuningdetail_21_265507 n
+      inner join db1.gonzo a using(gonzo) 
+      set n.column1 = a.column1, n.word3 = a.word3\G
+# Converted for EXPLAIN
+# EXPLAIN
+select  n.column1 = a.column1, n.word3 = a.word3 from db2.tuningdetail_21_265507 n
+      inner join db1.gonzo a using(gonzo) \G
+
+# Query 2: 0 QPS, 0x concurrency, ID 0x0FFE94ABA6A2A9E8 at byte 1316 _____
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         12       1
+# Exec time      4    33ms    33ms    33ms    33ms    33ms       0    33ms
+# Lock time      9    28us    28us    28us    28us    28us       0    28us
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Users          1 [SQL_SLAVE]
+# Databases      0
+# Time range
+# Query_time distribution
+#   1us
+#  10us
+# 100us
+#   1ms
+#  10ms  ################################################################
+# 100ms
+#    1s
+#  10s+
+# Tables
+#    SHOW TABLE STATUS FROM `db4` LIKE 'vab3concept1upload'\G
+#    SHOW CREATE TABLE `db4`.`vab3concept1upload`\G
+UPDATE db4.vab3concept1upload
+SET    vab3concept1id = '91848182522'
+WHERE  vab3concept1upload='6994465'\G
+# Converted for EXPLAIN
+# EXPLAIN
+select     vab3concept1id = '91848182522' from db4.vab3concept1upload where   vab3concept1upload='6994465'\G
+
+# Query 3: 0 QPS, 0x concurrency, ID 0xB211BA2B8D6D065C at byte 2363 _____
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         25       2
+# Exec time      0     1ms   530us   530us   530us   530us       0   530us
+# Lock time     17    54us    27us    27us    27us    27us       0    27us
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Users          1 [SQL_SLAVE]
+# Databases      0
+# Time range
+# Query_time distribution
+#   1us
+#  10us
+# 100us  ################################################################
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+
+# Tables
+#    SHOW TABLE STATUS FROM `foo` LIKE 'bar'\G
+#    SHOW CREATE TABLE `foo`.`bar`\G
+UPDATE foo.bar
+SET    biz = '91848182522'\G
+# Converted for EXPLAIN
+# EXPLAIN
+select     biz = '91848182522' from foo.bar \G
+
+# Query 4: 0 QPS, 0x concurrency, ID 0x6969975466519B81 at byte 2825 _____
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         12       1
+# Exec time      0   530us   530us   530us   530us   530us       0   530us
+# Lock time      8    27us    27us    27us    27us    27us       0    27us
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Users          1 [SQL_SLAVE]
+# Databases      0
+# Time range
+# Query_time distribution
+#   1us
+#  10us
+# 100us  ################################################################
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+
+# Tables
+#    SHOW TABLE STATUS FROM `bizzle` LIKE 'bat'\G
+#    SHOW CREATE TABLE `bizzle`.`bat`\G
+UPDATE bizzle.bat
+SET    boop='bop: 899'
+WHERE  fillze='899'\G
+# Converted for EXPLAIN
+# EXPLAIN
+select     boop='bop: 899' from bizzle.bat where   fillze='899'\G
+
+# Query 5: 0 QPS, 0x concurrency, ID 0xC22D235B07D1D774 at byte 1840 _____
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         12       1
+# Exec time      0   530us   530us   530us   530us   530us       0   530us
+# Lock time      8    27us    27us    27us    27us    27us       0    27us
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Users          1 [SQL_SLAVE]
+# Databases      0
+# Time range
+# Query_time distribution
+#   1us
+#  10us
+# 100us  ################################################################
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+
+# Tables
+#    SHOW TABLE STATUS FROM `db1` LIKE 'conch'\G
+#    SHOW CREATE TABLE `db1`.`conch`\G
+INSERT INTO db1.conch (word3, vid83)
+VALUES ('211', '18')\G
+
+# Query 6: 0 QPS, 0x concurrency, ID 0x7546F89214254F2F at byte 803 ______
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         12       1
+# Exec time      0   512us   512us   512us   512us   512us       0   512us
+# Lock time     25    77us    77us    77us    77us    77us       0    77us
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Users          1 [SQL_SLAVE]
+# Databases      0
+# Time range
+# Query_time distribution
+#   1us
+#  10us
+# 100us  ################################################################
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+
+# Tables
+#    SHOW TABLE STATUS FROM `db3` LIKE 'vendor11gonzo'\G
+#    SHOW CREATE TABLE `db3`.`vendor11gonzo`\G
+INSERT INTO db3.vendor11gonzo (makef, bizzle)
+VALUES ('', 'Exact')\G
+
+# Query 7: 0 QPS, 0x concurrency, ID 0x85FFF5AA78E5FF6A at byte 0 ________
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         12       1
+# Exec time      0    12us    12us    12us    12us    12us       0    12us
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Users          1 [SQL_SLAVE]
+# Databases      0
+# Time range 2007-12-18 11:48:27 to 2007-12-18 11:48:27
+# Query_time distribution
+#   1us
+#  10us  ################################################################
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+
+BEGIN\G
