@@ -1,5 +1,6 @@
 Changelog for mk-query-digest:
 
+   * No results when --orderby contained a nonexistent attribute (issue 244).
    * Added --review-history and --create-review-history (issue 194).
    * Removed string interpolation from debugging calls (issue 308).
    * Standard deviation was not for all values (issue 321).
